--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,3 +3,6 @@
 <p>Title: <%= @article.title %> </p>
 
 <p>Description: <%= @article.description %> </p>
+
+<%= link_to "edit this article", edit_article_path(@article) %> | 
+<%= link_to "back to articles listing", articles_path %>
