--- a/app/views/blog/home.html.erb
+++ b/app/views/blog/home.html.erb
@@ -1,13 +1,5 @@
-<div style="display: flex; flex-direction: column; justify-content: center;">
-  <div id="header" style="margin: auto;"> j's blog </div>
-  <div id="body" style="display: flex; flex-direction: column; justify-content: center; margin: auto;">
-    <div style="margin: auto;">
-      <%= link_to "my blog", articles_path %> |
-      <%= link_to "about", about_path %>
-    </div>
-    <div style="margin: auto;">
-      <%= link_to image_tag('profileimage.png'), 'https://jankrause.net' %>
-    </div>
-  </div>
-  <div id="footer" style="margin: auto;"> Kr2018</div>
+
+<div class="center jumbotron">
+  <h1>ALPHABLOG</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
 </div>
