--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,16 @@
-<h1>showing selected article</h1>
+<h2 align="center">title: <%= @article.title %> </h2>
 
-<p>Title: <%= @article.title %> </p>
+<div class="well col-xs-8 col-xs-offset-2">
+  <h4 class="center description"><strong>description: </strong></h4>
+  <hr>
+  <%= simple_format(@article.description) %>
+  <div class="article-actions">
+    <%= link_to "edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %> 
+    <%= link_to "delete this article", article_path(@article), method: :delete,
+                                       data: {confirm: "are you sure?"},
+                                       class: "btn btn-xs btn-danger" %> 
+    <%= link_to "veiw all articles", articles_path, class: "btn btn-xs btn-success" %>
+  </div>
+  </hr>
+</div>
 
-<p>Description: <%= @article.description %> </p>
-
-<%= link_to "edit this article", edit_article_path(@article) %> | 
-<%= link_to "back to articles listing", articles_path %>
