add user data to article listing page

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,4 @@
 <h1 align="center">listing all articles</h1>
-
-
   
   <% @articles.each do |article| %>
   <div class="row">
@@ -11,6 +9,13 @@
         </div>
         <div class="article-body">
           <%= truncate(article.description, length: 100) %>
+          <div class="article-meta-details">
+            <small>
+              created by: <%= article.user.username if article.user %>,
+              created at: <%= time_ago_in_words(article.created_at) %> ago,
+              last update: <%= time_ago_in_words(article.updated_at) %> ago
+            </small>
+          </div>
         </div>
         <div class="article-actions">
           <%= link_to "edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %> 
