--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,23 @@
 <h2 align="center">title: <%= @article.title %> </h2>
 
-<div class="well col-xs-8 col-xs-offset-2">
+<div class="col-xs-8 col-xs-offset-2">
+    <% if @article.user %>
+    <ul class="listing">
+      <div class="row center">
+        <div calss="well coll-md4 col-md-offset-4">
+          <li>created by:</li>
+          <li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
+          <li class="article-title">
+            <%= link_to @article.user.username, user_path(@article.user) %></li>
+          </li>
+          <li><small>
+            <%= pluralize(@article.user.articles.count, "article") if @article.user.articles %>
+          </small</li>
+        </div>
+      </div>
+  </ul>
+  <% end %>
+  
   <h4 class="center description"><strong>description: </strong></h4>
   <hr>
   <%= simple_format(@article.description) %>
