--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -15,12 +15,14 @@
             </small>
           </div>
         </div>
-        <div class="article-actions">
-          <%= link_to "edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %> 
-          <%= link_to "delete this article", article_path(article), method: :delete,
-                                             data: {confirm: "are you sure?"},
-                                             class: "btn btn-xs btn-danger" %> 
-        </div>
+        <% if logged_in? and current_user == article.user %>
+          <div class="article-actions">
+            <%= link_to "edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %> 
+            <%= link_to "delete this article", article_path(article), method: :delete,
+                                               data: {confirm: "are you sure?"},
+                                               class: "btn btn-xs btn-danger" %> 
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
