--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1 align="center">welcome to <%= @user.username %>'s page</hi>
+<h1 align="center">welcome to <%= @user.username %>'s page</h1>
 
 <div class="row">
   <div class="col-md-4 col-md-offset-4 center">
