add admin delete funtionnality

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,6 +10,10 @@
             <%= link_to user.username, user_path(user) %></li>
           </li>
           <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small</li>
+          <% if logged_in? and current_user.admin? %>
+            <li><%= link_to "delete this user", user_path(user), method: :delete,
+                   data: {confirm: "are you sure to delete this user and its articles?" } %></li>
+          <% end %>
         </div>
       </div>
     </ul>
