--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -46,7 +46,7 @@
           <li><%= link_to 'log out', logout_path, method: :delete %></li>
 
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">your profile<span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">your profile <%= "(admin)" if current_user.admin? %><span class="caret"></span></a>
             <ul class="dropdown-menu">
               <!-- <li><a href="#">Action</a></li> -->
               <li><%= link_to "edit profile", edit_user_path(current_user) %></li>
