--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,8 @@
 <h1 align="center">listing all categories</h1>
 
+
 <div align="center">
+  <%= will_paginate %>
   <% @categories.each do |category| %>
     <ul class="listing"> 
       <div class="row">
@@ -12,4 +14,5 @@
       </div>
     </ul>
   <% end %>
+  <%= will_paginate %>
 </div>
