--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -34,6 +34,20 @@
             </ul>
           </li>
         <% end %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">categories <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <!-- <li><a href="#">Action</a></li> -->
+            <li><%= link_to "all categories", categories_path %></li>
+            <% Category.all.each do |category| %>
+              <li><%= link_to "#{category.name}", category_path(category) %></li>
+            <% end %>
+            <% if logged_in?  and current_user.admin? %>            
+              <li role="separator" class="divider"></li>
+              <li><%= link_to "create new category", new_category_path %></li>
+            <% end %>
+          </ul>
+        </li>          
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
